--- a/czjszsz.html
+++ b/czjszsz.html
@@ -63,12 +63,12 @@ a:hover {
 .STYLE23 {
 	font-family: "simsun", "serif";
 	color: #323E32;
+	font-size: 24px;
 }
 .STYLE27 {color: #FFFFFF; font-size: 24px; }
 .STYLE29 {color: #FFFFFF; font-size: 16px; }
-.STYLE30 {text-align: center; font-size: 24px; color: #FFFFFF; }
 .STYLE31 {font-size: 16px; font-family: 黑体; color: #FFFF00; }
-.STYLE33 {font-family: 黑体; color: #FFFFFF; font-size: 16px;}
+.STYLE34 {font-size: 24px}
 </style>
 </head>
 
@@ -102,6 +102,8 @@ a:hover {
 <p class="style3">&nbsp;</p>
 <p align="left" class="style3">&nbsp;</p>
 <p align="left" class="style3">&nbsp;</p>
+<p align="left" class="style3">&nbsp;</p>
+<p align="left" class="style3">&nbsp;</p>
 <table width="800" border="1" bordercolor="#FFFFFF" bgcolor="#33CC33">
   <tr>
     <td width="352"><div align="center"><span class="STYLE27">公众号文章</span></div></td>
@@ -116,7 +118,7 @@ a:hover {
     <td class="STYLE29">1、班主任的位与政；2、存在与时间；3、三“好”班主任</td>
   </tr>
   <tr>
-    <td colspan="2" bgcolor="#FFFFFF">2022年8月</td>
+    <td colspan="2" bgcolor="#FFFFFF">&nbsp;</td>
   </tr>
   <tr>
     <td class="STYLE31"><a href="https://mp.weixin.qq.com/s/1LhzTGvBA7JbMNoSUTDNtw">深中坪山创新学校深中名师课堂公众号</a></td>
@@ -144,7 +146,7 @@ a:hover {
       2、种植庄稼与培养人才的关系</p>      </td>
   </tr>
   <tr>
-    <td colspan="2" bgcolor="#FFFFFF">2022年2月</td>
+    <td colspan="2" bgcolor="#FFFFFF">&nbsp;</td>
   </tr>
 </table>
 <p class="style3">&nbsp;</p>
@@ -152,14 +154,14 @@ a:hover {
 	<br />
 	正君<br />
 	之教</div>
-<div style="position: absolute; width: 274px; height: 477px; z-index: 3; left: 663px; top: 166px" id="layer4" class="style15">
-  <p>清&nbsp; 流<br />
+<div style="position: absolute; width: 274px; height: 477px; z-index: 3; left: 809px; top: 157px" id="layer4" class="style15">
+  <p align="center">清&nbsp; 流<br />
     <br />
       <span class="style18"><a href="大学毕业留言序.htm">序</a></span><br />
       <br />
     <span class="style18"><a href="古意.htm">古意</a></span></p>
-  <p><span class="style18"><a href="古韵.htm">古韵</a></span></p>
-  <p><span class="style18"><a href="窗台小语.htm"></a></span><span style="line-height: 150%; font-family: 宋体; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;" class="style18">
+  <p align="center"><span class="style18"><a href="古韵.htm">古韵</a></span></p>
+  <p align="center"><span class="style18"><a href="窗台小语.htm"></a></span><span style="line-height: 150%; font-family: 宋体; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;" class="style18">
     <a href="与你为邻.htm">与你为邻</a></span><span lang="EN-US" style="font-size: 12.0pt; line-height: 150%">
       <o:p><br />
         <br />
@@ -170,41 +172,42 @@ a:hover {
       <a href="红树林观鸟.htm">红树林观鸟</a></span><br />
     <br />
   <a href="清流/那一年，蓝天上白云朵朵.htm">那一年，蓝天上白云朵朵</a></p>
-  <p class="style18"><a href="清流/你的一面，在我的眼中.htm">你的一面，在我的眼中</a></p>
-  <p class="style18">&nbsp;</p>
+  <p align="center" class="style18"><a href="清流/你的一面，在我的眼中.htm">你的一面，在我的眼中</a></p>
+  <p align="center" class="style18"><span class="STYLE34" style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt"><a href="理性的田园.htm">理性的田园</a></span></p>
 </div>
-<div style="position: absolute; width: 274px; height: 381px; z-index: 4; left: 300px; top: 163px" id="layer3" class="style15">
-<p>随&nbsp; 笔<br />
+<div style="position: absolute; width: 274px; height: 381px; z-index: 4; left: 449px; top: 158px" id="layer3" class="style15">
+<p align="center">随&nbsp; 笔<br />
     <br />
     <a href="清流/省培随笔12篇.htm">省骨干教师培训随笔12篇    </a></p>
-<p><a href="清流/跑起来，思想10篇.htm">跑起来，思想10篇</a></p>
-<p><span class="style18"><a href="解放“知识”.htm">解放知识</a></span><br />
+<p align="center"><a href="清流/跑起来，思想10篇.htm">跑起来，思想10篇</a></p>
+<p align="center"><span class="style18"><a href="解放“知识”.htm">解放知识</a></span><br />
     <br />
     <span class="style18"><a href="观人自在%20方得自在.htm">观人自在方得自在</a></span><br />
     <br />
     <a href="浮云之谶.htm">
     <span style="mso-ascii-font-family: Calibri; mso-ascii-theme-font: minor-latin; mso-fareast-font-family: 宋体; mso-fareast-theme-font: minor-fareast; mso-hansi-font-family: Calibri; mso-hansi-theme-font: minor-latin" class="style18">
-    浮云之谶</span>
-    </a><br />
+    浮云之谶</span>    </a><br />
 </p>
-<p>  <a href="清流/听不见啊.htm">听不见啊！？</a></p>
-<p><br />
+<p align="center">  <a href="清流/听不见啊.htm">听不见啊！？</a></p>
+<p align="center"><br />
   <span style="font-family: 宋体; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri" class="style18">
     <a href="与一所乡间学校的对视.htm">与一所乡间学校的对视</a></span><br />
   <br />
   <span style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: 宋体; mso-ascii-font-family: simsun; mso-hansi-font-family: simsun; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt" class="style18">
   <a href="梦亦有道.htm">梦亦有道</a></span></p>
-<span lang="EN-US" style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt"><o:p>
-<span class="style18"><a href="与南师.htm">与南师</a></span><br />
-<br />
-<span style="font-family: 黑体; mso-hansi-font-family: Calibri" class="style18">
-<a href="关于“皇者之声”的审美.htm">关于“皇者之声”的审美</a></span><span lang="EN-US"><o:p>
-</span></span>
-<p><span class="STYLE23"><a href="清流/足球，在脚下.htm">足球，在脚下</a></span></p>
-<p><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt"><span lang="EN-US">  </span></span><span style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt" class="style18"><a href="理性的田园.htm">理性的田园</a></span></p>
+<div align="center"><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt">
+  <o:p>
+  <span class="style18"><a href="与南师.htm">与南师</a></span><br />
+  <span style="font-family: 黑体; mso-hansi-font-family: Calibri" class="style18">
+  <a href="关于“皇者之声”的审美.htm">关于“皇者之声”的审美</a></span><span lang="EN-US">
+  <o:p>
+  </span></span>
 </div>
-<div style="position: absolute; width: 191px; height: 387px; z-index: 5; left: 50px; top: 162px" id="layer2" class="style14">
-  <p><span class="style16">学&nbsp; 理<br />
+<p align="center"><span class="STYLE23"><a href="清流/足球，在脚下.htm">足球，在脚下</a></span></p>
+<p align="center">&nbsp;</p>
+</div>
+<div style="position: absolute; width: 372px; height: 387px; z-index: 5; left: 44px; top: 158px" id="layer2" class="style14">
+  <p align="center"><span class="style16">学&nbsp; 理<br />
     </span>
 	    <br />
 	    <a href="三分天下说审美.htm">三分天下</a><br />
@@ -215,18 +218,16 @@ a:hover {
 	    <br />
 	    <a href="语文教育是实践之学.htm">教育实践论</a><br />
 	    <br />
-	    <a href="初中文言文教学需要理顺的几个关系.htm">三种关系</a><br />
-	    <br />
-	    <span class="style18"><a href="班主任的核动力.htm">班主任的核动力</a></span><br />
-	    <br />
-	    <a href="两种“时间”在语文教学中的对视.htm">两种时间</a><br />
-	    <br />
-      <a href="清流/论语微摘.htm">《论语》微摘</a></p>
-	<p><a href="清流/东坡志林摘要.htm">《东坡志林》摘</a></p>
-	<p><a href="清流/原本大学微言笔记.htm">《原本大学微言》摘</a></p>
-	<p><span style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt" class="style18"><a href="《非虚构写作》阅读笔记.htm">《<span style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt" class="style18"><a href="《非虚构写作》阅读笔记.htm">非</a></span>虚构写作</a></span><a href="《非虚构写作》阅读笔记.htm">》摘</a></p>
-	<p><a href="力行的德育（深圳中学陈正君）.htm" target="_blank">力行的德育</a></p>
-	<p><img src="jpg/工作室/工作室20201027.jpg" width="180" height="249" /></p>
+      <span class="style18"><a href="班主任的核动力.htm">班主任的核动力</a></span></p>
+  <p align="center"><a href="初中文言文教学需要理顺的几个关系.htm">三种关系</a></p>
+  <p align="center"><a href="两种“时间”在语文教学中的对视.htm">两种时间</a><br />
+    <br />
+    <a href="清流/论语微摘.htm">《论语》微摘</a></p>
+  <p align="center"><a href="清流/东坡志林摘要.htm">《东坡志林》摘</a></p>
+	<p align="center"><a href="清流/原本大学微言笔记.htm">《原本大学微言》摘</a></p>
+	<p align="center"><span style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt" class="style18"><a href="《非虚构写作》阅读笔记.htm">《<span style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt" class="style18"><a href="《非虚构写作》阅读笔记.htm">非</a></span>虚构写作</a></span><a href="《非虚构写作》阅读笔记.htm">》摘</a></p>
+	<p align="center"><a href="力行的德育（深圳中学陈正君）.htm" target="_blank" class="STYLE34">力行的德育</a></p>
+	<p><img src="jpg/工作室/工作室20201027.jpg" width="174" height="242" /> <img src="jpg/工作室/202501.jpg" width="159" height="242" /></p>
 </div>
 
 </body>
