--- a/czjszsz.html
+++ b/czjszsz.html
@@ -63,12 +63,16 @@ a:hover {
 .STYLE23 {
 	font-family: "simsun", "serif";
 	color: #323E32;
-	font-size: 24px;
+	font-size: 18px;
 }
 .STYLE27 {color: #FFFFFF; font-size: 24px; }
 .STYLE29 {color: #FFFFFF; font-size: 16px; }
 .STYLE31 {font-size: 16px; font-family: 黑体; color: #FFFF00; }
 .STYLE34 {font-size: 24px}
+.STYLE35 {color: #FFFFFF}
+.style5 {	font-size: x-large;
+}
+.STYLE36 {font-size: 18px}
 </style>
 </head>
 
@@ -165,6 +169,11 @@ a:hover {
     <a href="与你为邻.htm">与你为邻</a></span><span lang="EN-US" style="font-size: 12.0pt; line-height: 150%">
       <o:p><br />
         <br />
+        <span class="MsoNormal STYLE36" style="text-align: center; line-height: 150%"><span style="line-height: 150%; font-family: 宋体; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;"><a href="是你，让我超越了平常的自己.htm">是你，让我超越了平常的自己</a></span>
+        <a href="是你，让我超越了平常的自己.htm">
+        <o:p></o:p>
+        </a></span><br />
+        <br />
         <span class="style18"><a href="与一种情绪重逢.htm">与一种情绪重逢</a></span></o:p>
       </span><br />
       <br />
@@ -175,7 +184,7 @@ a:hover {
   <p align="center" class="style18"><a href="清流/你的一面，在我的眼中.htm">你的一面，在我的眼中</a></p>
   <p align="center" class="style18"><span class="STYLE34" style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt"><a href="理性的田园.htm">理性的田园</a></span></p>
 </div>
-<div style="position: absolute; width: 274px; height: 381px; z-index: 4; left: 449px; top: 158px" id="layer3" class="style15">
+<div style="position: absolute; width: 274px; height: 610px; z-index: 4; left: 449px; top: 158px" id="layer3" class="style15">
 <p align="center">随&nbsp; 笔<br />
     <br />
     <a href="清流/省培随笔12篇.htm">省骨干教师培训随笔12篇    </a></p>
@@ -186,11 +195,9 @@ a:hover {
     <br />
     <a href="浮云之谶.htm">
     <span style="mso-ascii-font-family: Calibri; mso-ascii-theme-font: minor-latin; mso-fareast-font-family: 宋体; mso-fareast-theme-font: minor-fareast; mso-hansi-font-family: Calibri; mso-hansi-theme-font: minor-latin" class="style18">
-    浮云之谶</span>    </a><br />
-</p>
-<p align="center">  <a href="清流/听不见啊.htm">听不见啊！？</a></p>
-<p align="center"><br />
-  <span style="font-family: 宋体; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri" class="style18">
+  浮云之谶</span></a></p>
+<p align="center"><a href="清流/听不见啊.htm">听不见啊！？</a></p>
+<p align="center"><span style="font-family: 宋体; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri" class="style18">
     <a href="与一所乡间学校的对视.htm">与一所乡间学校的对视</a></span><br />
   <br />
   <span style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: 宋体; mso-ascii-font-family: simsun; mso-hansi-font-family: simsun; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt" class="style18">
@@ -201,10 +208,10 @@ a:hover {
   <span style="font-family: 黑体; mso-hansi-font-family: Calibri" class="style18">
   <a href="关于“皇者之声”的审美.htm">关于“皇者之声”的审美</a></span><span lang="EN-US">
   <o:p>
-  </span></span>
-</div>
+  </span></span></div>
+<p align="center"><a href="《非虚构写作》阅读笔记.htm">《非虚构写作》摘</a></p>
 <p align="center"><span class="STYLE23"><a href="清流/足球，在脚下.htm">足球，在脚下</a></span></p>
-<p align="center">&nbsp;</p>
+<p align="center" class="STYLE35"><a href="“我的时间”之分析.htm">“我的时间”之分析</a></p>
 </div>
 <div style="position: absolute; width: 372px; height: 387px; z-index: 5; left: 44px; top: 158px" id="layer2" class="style14">
   <p align="center"><span class="style16">学&nbsp; 理<br />
@@ -225,7 +232,6 @@ a:hover {
     <a href="清流/论语微摘.htm">《论语》微摘</a></p>
   <p align="center"><a href="清流/东坡志林摘要.htm">《东坡志林》摘</a></p>
 	<p align="center"><a href="清流/原本大学微言笔记.htm">《原本大学微言》摘</a></p>
-	<p align="center"><span style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt" class="style18"><a href="《非虚构写作》阅读笔记.htm">《<span style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: 宋体; color: #323E32; mso-font-kerning: 0pt" class="style18"><a href="《非虚构写作》阅读笔记.htm">非</a></span>虚构写作</a></span><a href="《非虚构写作》阅读笔记.htm">》摘</a></p>
 	<p align="center"><a href="力行的德育（深圳中学陈正君）.htm" target="_blank" class="STYLE34">力行的德育</a></p>
 	<p><img src="jpg/工作室/工作室20201027.jpg" width="174" height="242" /> <img src="jpg/工作室/202501.jpg" width="159" height="242" /></p>
 </div>
