--- a/“我的时间”之分析.htm
+++ b/“我的时间”之分析.htm
@@ -36,6 +36,7 @@
 .style6 {
 	font-size: x-large;
 }
+.STYLE8 {font-size: x-large; color: #FF0000; }
 </style>
 </head>
 
@@ -53,19 +54,18 @@
 		<td><br />
 		<p class="MsoNormal" align="center" style="text-align: center; text-indent: 21.0pt; mso-char-indent-count: 2.0">
 		<span style="mso-bidi-font-size: 10.5pt; font-family: 黑体; mso-font-kerning: 0pt">
-		<span class="style6">“我的时间”之分析</span><span lang="EN-US"><o:p></o:p></span></span></p>
-		<p class="MsoNormal" align="center" style="text-align: center; text-indent: 21.0pt; mso-char-indent-count: 2.0; font-size: x-large;">
-		<span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt">
-		(“My Time” Analysis)<o:p></o:p></span></p>
-		<p class="MsoNormal" align="center" style="text-align: center; font-size: x-large;">
-		<span lang="EN-US" style="mso-bidi-font-size: 10.5pt; font-family: 黑体; mso-font-kerning: 0pt"><o:p>
-		&nbsp;</o:p></span></p>
+		<span class="STYLE8">“我的时间”之分析</span><span lang="EN-US">
+		<o:p></o:p></span></span></p>
+		<p class="MsoNormal" align="center" style="text-align: center; text-indent: 21.0pt; mso-char-indent-count: 2.0; font-size: x-large;"><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; font-family: 黑体; mso-font-kerning: 0pt">
+		  <o:p>
+		    &nbsp;</o:p>
+		</span></p>
 		<p class="MsoNormal" align="center" style="text-align: center">
 		<span style="mso-bidi-font-size: 10.5pt; font-family: 宋体; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri; mso-font-kerning: 0pt" class="style6">
 		陈正君</span><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt"><o:p></o:p></span></p>
 		<p class="MsoNormal" align="center" style="text-align: center">
 		<span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt">
-		(<span class="style6">ChenZhengJun)</span><o:p></o:p></span></p>
+		<o:p></o:p></span></p>
 		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0">
 		<span style="mso-bidi-font-size: 10.5pt; font-family: 黑体; mso-font-kerning: 0pt">
 		<span class="style6">摘要：</span></span><span style="mso-bidi-font-size: 10.5pt; font-family: 宋体; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri; mso-font-kerning: 0pt"><span class="style6">“我的时间”与悠久的历史相比，犹如沧海一粟。我们的文化传统不习惯“我的时间”的本质反思，而新时期倡导的和谐发展又分明指向了“我”的精神深处，所以对于“我的时间”之分析就成了一种必然。本文从“流”入手，阐明了线型、环型、三角时间流等三种方式，提出“时间在线”与“时间影子”新概念，把“情志”引入“我的时间”中来研究，是一种创新。散文笔法，适于普众。</span></span><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt"><o:p></o:p></span></p>
@@ -81,30 +81,15 @@
 		</span></span></span>
 		<span style="mso-bidi-font-size: 10.5pt; font-family: 宋体; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri; mso-font-kerning: 0pt">
 		<span class="style6">分析</span></span><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt"><o:p></o:p></span></p>
-		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0; font-size: x-large;">
-		<span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt">
-		Abstract: Campared with the long history, “my time” is just like a drop 
-		of water. Our cultural tradition doesn’t have the habit of reflecting on 
-		the essence of “my time”, while the harmonious development advocated by 
-		the new period points directly to the trenchant point of “my spirit”. So 
-		the analysis of “my time” turns out to become a kind of inevitable. The 
-		essay starts from “time flow”, expounds upon the three styles of flow: 
-		the liner ,the ring and the triangle. It also put forward the new 
-		concept of “ time online” and “ shadow of the time “ and introduce “ 
-		emotions and feelings” to time research .It’s an total innovation. The 
-		essay has a prose style and easy for mass to read.
-		<span style="mso-spacerun: yes">&nbsp;&nbsp;</span><o:p></o:p></span></p>
-		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0; font-size: x-large;">
-		<span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt">
-		Keywords: my time<span style="mso-spacerun: yes">&nbsp;&nbsp; </span>
-		flow <span style="mso-spacerun: yes">&nbsp;&nbsp;</span>time on-line
-		<span style="mso-spacerun: yes">&nbsp;&nbsp;</span>analysis<o:p></o:p></span></p>
-		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0; font-size: x-large;">
-		<span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt"><o:p>
-		&nbsp;</o:p></span></p>
-		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0; font-size: x-large;">
-		<span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt"><o:p>
-		&nbsp;</o:p></span></p>
+		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0; font-size: x-large;"><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt">
+		  <o:p></o:p>
+		</span><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt">
+		<o:p>
+		  &nbsp;</o:p>
+		</span><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt">
+		<o:p>
+		  &nbsp;</o:p>
+		</span></p>
 		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0">
 		<span style="mso-bidi-font-size: 10.5pt; font-family: 宋体; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri; mso-font-kerning: 0pt" class="style6">
 		之于时间的探寻，自古以来，都是以永恒为终极目标的，即希望在这种超越此在的探寻中向过去与未来无限延伸，找到起点，预言终点。就个人而言，总想预见未来，找到自己的人生方向。在这种线型的时间史中，超越了个人的，即“我”的此在，无限指向族群、人类、自然，甚至于宇宙。不同学科的智者都站在“时间”之上，流露出揭示真理的豪情。“解蔽”成了智者的人生游戏，诸多探求的结论已经很难超越。霍金的时间简史在一定程度上昭示了自然科学的胜利，哲学家们如果还是选择自然或宇宙为研究原点，无疑是自酿苦酒。值得庆幸的是，有一些哲学家已经把“人”作为研究的原点，有意避开自然或宇宙，对人的存在作了更本质的探寻，思想方向、研究方法都形成了一定的体系，这是一个新的开始。关于时间的研究也就有了新的原点，“我的时间”分析正是从“个人”这一原点出发的。</span><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt"><o:p></o:p></span></p>
@@ -113,7 +98,7 @@
 		&nbsp;</o:p></span></p>
 		<p class="MsoNormal" align="center" style="text-align: center; text-indent: 21.0pt; mso-char-indent-count: 2.0">
 		<span style="mso-bidi-font-size: 10.5pt; font-family: 黑体; mso-font-kerning: 0pt">
-		流<span lang="EN-US"><o:p></o:p></span></span></p>
+		<span class="STYLE8">流</span><span lang="EN-US"><o:p></o:p></span></span></p>
 		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0">
 		<span style="mso-bidi-font-size: 10.5pt; font-family: 宋体; mso-font-kerning: 0pt">
 		<span class="style6">我们生活在这个世界中，总是要围绕<span lang="EN-US">“</span>我<span lang="EN-US">”</span>去关注外界以及由此而衍生的种种。多数时候，我们对<span lang="EN-US">“</span>我<span lang="EN-US">”</span>以及外界（非我）的关注往往会得到错误的或是不完整的结论，给我们的选择带来错误的判断，让我们变得更迷惘。</span><span lang="EN-US"><o:p></o:p></span></span></p>
@@ -126,7 +111,7 @@
 		由于人对世界的认识的局限，大多数人看世界是出于本能，这必然会产生一些错觉，特别是人习惯在某个节点上静态地观察。当然，这种习惯是与生俱来的，我们要改变的就是这种静观的习惯，让自己逐渐学会用<span lang="EN-US">“</span>流<span lang="EN-US">”</span>的意识去看世界、析问题、作判断。</span><span lang="EN-US"><o:p></o:p></span></span></p>
 		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0">
 		<span style="mso-bidi-font-size: 10.5pt; font-family: 宋体; mso-font-kerning: 0pt">
-		用<span lang="EN-US"><span class="style6">“</span></span><span class="style6">流</span><span lang="EN-US"><span class="style6">”</span></span><span class="style6">的意识去观察其实就是一种反思性的观察，而不仅仅停留在对于过去、现在、未来的简单描述，一定要在描述的基础上多涉及到<span lang="EN-US">“</span>情志<span lang="EN-US">”</span>的反思，只有<span lang="EN-US">“</span>情志<span lang="EN-US">”</span>的反思与生发，才是<span lang="EN-US">“</span>流<span lang="EN-US">”</span>的本质力量。</span><span lang="EN-US"><o:p></o:p></span></span></p>
+		<span class="style6">用</span><span lang="EN-US"><span class="style6">“</span></span><span class="style6">流</span><span lang="EN-US"><span class="style6">”</span></span><span class="style6">的意识去观察其实就是一种反思性的观察，而不仅仅停留在对于过去、现在、未来的简单描述，一定要在描述的基础上多涉及到<span lang="EN-US">“</span>情志<span lang="EN-US">”</span>的反思，只有<span lang="EN-US">“</span>情志<span lang="EN-US">”</span>的反思与生发，才是<span lang="EN-US">“</span>流<span lang="EN-US">”</span>的本质力量。</span><span lang="EN-US"><o:p></o:p></span></span></p>
 		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0">
 		<span style="mso-bidi-font-size: 10.5pt; font-family: 宋体; mso-font-kerning: 0pt">
 		<span class="style6">
@@ -143,7 +128,8 @@
 		&nbsp;<o:p></o:p></span></p>
 		<p class="MsoNormal" align="center" style="text-align: center">
 		<span style="mso-bidi-font-size: 10.5pt; font-family: 黑体; mso-font-kerning: 0pt">
-		<span class="style6">时间流</span><span lang="EN-US"><o:p></o:p></span></span></p>
+		<span class="STYLE8">时间流</span><span lang="EN-US">
+		<o:p></o:p></span></span></p>
 		<p class="MsoNormal" align="left" style="text-align: left; text-indent: 21.0pt; mso-char-indent-count: 2.0">
 		<span style="mso-bidi-font-size: 10.5pt; font-family: 宋体; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri; mso-font-kerning: 0pt" class="style6">
 		人是由日子构成的。当“时间”演变成“日子”就与“人”或“我”构成了密切的关系。</span><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt"><o:p></o:p></span></p>
@@ -170,7 +156,8 @@
 		<span lang="EN-US" style="mso-bidi-font-size: 10.5pt"><o:p>&nbsp;</o:p></span></p>
 		<p class="MsoNormal" align="center" style="text-align: center">
 		<span style="mso-bidi-font-size: 10.5pt; font-family: 黑体">
-		<span class="style6">时间在线</span><span lang="EN-US"><o:p></o:p></span></span></p>
+		<span class="STYLE8">时间在线</span><span lang="EN-US">
+		<o:p></o:p></span></span></p>
 		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0">
 		<span style="mso-bidi-font-size: 10.5pt; font-family: 宋体; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri; mso-font-kerning: 0pt" class="style6">
 		事实上，语境与视界在大多数时候是重叠的，任何的纯粹脱离此在生活都非常艰难，此在生活，从时间角度来说，就是一种在线方式，视觉系统拥有记录在线时间的优势。</span><span lang="EN-US" style="mso-bidi-font-size: 10.5pt"><o:p></o:p></span></p>
@@ -185,7 +172,8 @@
 		&nbsp;</o:p></span></p>
 		<p class="MsoNormal" align="center" style="text-align: center">
 		<span style="mso-bidi-font-size: 10.5pt; font-family: 黑体; mso-font-kerning: 0pt">
-		<span class="style6">时间影子</span><span lang="EN-US"><o:p></o:p></span></span></p>
+		<span class="STYLE8">时间影子</span><span lang="EN-US">
+		<o:p></o:p></span></span></p>
 		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0">
 		<span style="mso-bidi-font-size: 10.5pt; font-family: 宋体; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri; mso-font-kerning: 0pt">
 		<span class="style6">
@@ -198,20 +186,20 @@
 		&nbsp;</o:p></span></p>
 		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0; font-size: x-large;">
 		<span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt"><o:p>
-		&nbsp;</o:p></span></p>
-		<p class="MsoNormal" style="text-indent: 21.1pt; mso-char-indent-count: 2.0; font-size: x-large;">
-		<b style="mso-bidi-font-weight: normal">
-		<span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt"><o:p>
-		&nbsp;</o:p></span></b></p>
-		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0; font-size: x-large;">
-		<span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt"><o:p>
-		&nbsp;</o:p></span></p>
+		&nbsp;</o:p></span><b style="mso-bidi-font-weight: normal"><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt">
+		<o:p>
+		  &nbsp;</o:p>
+		</span></b><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt">
+		<o:p>
+		  &nbsp;</o:p>
+		</span></p>
 		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0; font-size: x-large;">
 		<span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt"><o:p>
 		&nbsp;</o:p></span></p>
 		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0">
-		<span style="mso-bidi-font-size: 10.5pt; font-family: 宋体; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri; mso-font-kerning: 0pt" class="style6">
-		总之，拥有亲切情志的时间才是“我的时间”。</span><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt"><o:p></o:p></span></p>
+		<span class="STYLE8" style="mso-bidi-font-size: 10.5pt; font-family: 宋体; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri; mso-font-kerning: 0pt">
+		总之，拥有亲切情志的时间才是“我的时间”。</span><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt">
+		<o:p></o:p></span></p>
 		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0">
 		<span style="mso-bidi-font-size: 10.5pt; font-family: 宋体; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri; mso-font-kerning: 0pt" class="style6">
 		生活从朝阳开始书写真实，记忆却在余晖中洒落一地亲切。怀恋恰似归途，田间小路，牛羊成群……</span><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; mso-font-kerning: 0pt"><o:p></o:p></span></p>
@@ -235,7 +223,7 @@
 		<br />
 		<br />
 		<br />
-		</td>
+	  </td>
 	</tr>
 	<tr>
 		<td class="style4">个人观点，欢迎斧正<br />
